# local-llm-lab

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: backend_request.md  bug_report.md  model_preset.md
examples/: prompts.jsonl
examples/report/: index.html
fixtures/: apple-m3-ultra-192gb.json  apple-m4-max-128gb.json  apple-m4-max-64gb.json  apple-m4-ultra-256gb.json  linux-dual-h100-160gb.json  linux-rtx-4090-24gb.json
local_llm_lab/: __init__.py
marketing/: launch-kit.md
sample_reports/compare-llama70b/: compare.json  compare.md  index.html
sample_reports/demo/: index.html  report.md  source-input.json
sample_reports/recommend-llama70b/: recommend.json  recommend.md
src/local_llm_lab/: __init__.py  bench.py  cli.py  compare.py  deploy.py  fixtures.py  hardware.py  models.py  optional.py  planner.py  profiles.py  quantization.py  recommend.py  render.py  report.py  server.py  stress.py  units.py
tests/: test_compare.py  test_planner.py  test_profiles.py  test_recommend.py  test_units_models.py  test_workflows.py
