[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-lab"
version = "0.1.0"
description = "Honest local LLM deployment planning and benchmarking for high unified-memory Macs and future Linux/NVIDIA rigs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "local-llm-lab contributors" }
]
keywords = [
  "local-llm",
  "apple-silicon",
  "llama-cpp",
  "mlx",
  "ollama",
  "benchmark",
  "quantization",
  "unified-memory"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Benchmark"
]
dependencies = []

[project.optional-dependencies]
ui = ["rich>=13.7"]
detect = ["psutil>=5.9"]
charts = ["matplotlib>=3.8"]
all = ["rich>=13.7", "psutil>=5.9", "matplotlib>=3.8"]

[project.scripts]
local-llm-lab = "local_llm_lab.cli:main"

[project.urls]
Homepage = "https://github.com/duongngocbinh56599-ui/local-llm-lab"
Issues = "https://github.com/duongngocbinh56599-ui/local-llm-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_llm_lab = ["py.typed"]
